Fix image alignment

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -197,6 +197,8 @@
 			}
 
 			img {
+				display: block;
+				width: auto;
 				margin: 60px auto;
 			}
 
